added pit scripts